# fractal-explorer

./: .gitignore  CMakeLists.txt  Fractal.cpp  Fractal.h  FractalExplorer.sln  FractalExplorer.vcxproj  FractalExplorer.vcxproj.filters  Grid.h  README.md  Renderer.cpp  Renderer.h  main.cpp
headers/: Fractal.h  Grid.h  Renderer.h
include/: Fractal.h  Renderer.h
src/: Fractal.cpp  Fractal.h  Grid.cpp  Grid.h  Renderer.cpp  Renderer.h  main.cpp
